# ITSecurityCompliance

./: README.md
Backend/: .gitignore  app.py  config.py  database.py  pyproject.toml  pyrightconfig.json  ruff.toml  settings.py
Backend/controller/: blueprint.py  documents.py  error_handler.py  evidence_upload.py  filtered_documents.py  health_check.py  test_cases_query.py  upload_test.py
Backend/db/175b1b42-a80b-498a-a4e1-df87d9a0498b/: index_metadata.pickle
Backend/gpt/: embedder.py  gpt_wrapper.py  prompt_selector.py
Backend/model/: __init__.py  common_response.py  common_schemas.py
Backend/service/: documents.py  evidence_upload.py  filtered_documents.py  test_cases_query.py
Frontend/: README.md  package-lock.json  package.json  tsconfig.app.json
Frontend/src/: App.vue  main.ts
Frontend/src/components/: NavigationBar.vue
Frontend/src/interfaces/: consts.ts  types.ts
Frontend/src/repository/: getDocumentRepository.ts  getEvidenceResultRepository.ts  getTestCaseResultRepository.ts
Frontend/src/stores/: getCheckedDocumentStore.ts  getDocumentsStore.ts  getPreferenceListStore.ts  getPreferenceValueStore.ts
Frontend/src/views/: EvidenceTabView.vue  HomeView.vue
